--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,5 @@
 * {
-  font-family: -apple-system, BlinkMacSystemFont, "Poppins", "Segoe UI", "Oxygen", "Ubuntu",
-    "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
-  box-sizing: border-box;
+  font-family: -apple-system, BlinkMacSystemFont, "Poppins", sans-serif !important;
 }
 
 body {
